Correct src/index.nunjucks.html after last merge from Swisstopo
Close #91

--- a/config/config.toml.dist
+++ b/config/config.toml.dist
@@ -37,6 +37,9 @@ activatedPlugins = ["communes"]
 # Feedback
 feedback_recipient = 'support@sigeom.ch'
 
+# 3D
+default_terrain = 'ch.swisstopo.terrain.3d'
+
 
 # Ioda-Net specific configuration
 [in]
