--- a/config/config.toml.dist
+++ b/config/config.toml.dist
@@ -41,6 +41,23 @@ feedback_recipient = 'support@sigeom.ch'
 default_terrain = 'ch.swisstopo.terrain.3d'
 
 
+# Default lists for WMS and WMTS
+# Comment the key to use the default lists. Use an empty array to not propose a list with the interface.
+default_wms_list = [
+  'https://wms.geo.admin.ch/',
+  'http://www.geoservice.apps.be.ch/geoservice/services/a4p/a4p_basiswms_d_fk_s/MapServer/WMSServer?',
+  'http://www.geoservice.apps.be.ch/geoservice/services/a4p/a4p_grenzenwms_d_fk_s/MapServer/WMSServer?',
+  'http://www.geoservice.apps.be.ch/geoservice/services/a4p/a4p_planungwms_d_fk_s/MapServer/WMSServer?',
+  'http://www.geoservice.apps.be.ch/geoservice/services/a4p/a4p_umweltwms_d_fk_s/MapServer/WMSServer?',
+  'http://www.geoservice.apps.be.ch/geoservice/services/a4p/a4p_geologiewms_d_fk_s/MapServer/WMSServer?',
+  'http://www.geoservice.apps.be.ch/geoservice/services/a4p/a4p_gewaesserwms_d_fk_s/MapServer/WMSServer?',
+  'http://www.geoservice.apps.be.ch/geoservice/services/a4p/a4p_transportwms_d_fk_s/MapServer/WMSServer?',
+]
+default_wmts_list = [
+  'https://wmts.geo.admin.ch/1.0.0/WMTSCapabilities.xml'
+]
+
+
 # Ioda-Net specific configuration
 [in]
 allow_infobox = false
