--- a/package.json
+++ b/package.json
@@ -40,13 +40,13 @@
     "gulp-watch": "~4.2.0",
     "html-minifier": "0.7.2",
     "istanbul": "~0.3.20",
-    "karma": "~0.13.9",
+    "karma": "^0.13.15",
     "karma-babel-preprocessor": "^5.2.2",
-    "karma-chrome-launcher": "~0.2.0",
+    "karma-chrome-launcher": "^0.2.2",
     "karma-coverage": "~0.5.2",
-    "karma-firefox-launcher": "~0.1.6",
-    "karma-mocha": "~0.2.0",
-    "karma-phantomjs-launcher": "0.1.4",
+    "karma-firefox-launcher": "^0.1.7",
+    "karma-mocha": "^0.2.1",
+    "karma-phantomjs-launcher": "^0.1.4",
     "less": "~2.5.0",
     "less-plugin-clean-css": "~1.5.0",
     "localforage": "1.0.1",
