--- a/package.json
+++ b/package.json
@@ -1,73 +1,45 @@
 {
-  "name": "geoadmin3",
+  "name": "geofront3",
   "version": "3.0.0",
-  "description": "GeoAdmin 3 Application",
-  "_scripts": {
-    "test": "node test/selenium/tests.js"
-  },
+  "description": "GeoFront 3 Application",
   "repository": {
     "type": "git",
-    "url": "git://github.com/geoadmin/mf-geoadmin3"
+    "url": "git@github.com:ioda-net/geo-front3.git"
   },
   "author": "Swisstopo",
   "readmeFileName": "README.md",
   "devDependencies": {
-    "angular": "1.4.8",
-    "angular-mocks": "1.4.8",
-    "angular-translate": "2.8.1",
     "babel": "^5.8.34",
     "browserstack-webdriver": "2.41.1",
-    "commander": "2.9.0",
-    "d3": "3.5.12",
-    "del": "~1.2.0",
-    "expect.js": "0.3.1",
-    "extend": "~2.0.0",
-    "fastclick": "1.0.6",
-    "glob": "~5.0.0",
+    "q": "^1.4.1",
+    "istanbul": "~0.3.20",
+    "less": "~2.5.3",
+    "less-plugin-clean-css": "~1.5.1",
+    "ng-annotate": "1.2.1",
     "google-closure-compiler": "20151216.1.0",
     "google-closure-library": "20151216.0.0",
-    "gulp": "~3.9.0",
-    "gulp-concat": "~2.5.0",
-    "gulp-data": "~1.2.0",
-    "gulp-eslint": "*",
-    "gulp-ext-replace": "~0.2.0",
-    "gulp-if": "~1.2.0",
-    "gulp-less": "~3.0.0",
-    "gulp-ng-annotate": "~0.5.0",
-    "gulp-nunjucks-render": "~0.2.0",
-    "gulp-regex-rename": "~0.1.0",
-    "gulp-rename": "~1.2.0",
-    "gulp-replace": "~0.5.3",
-    "gulp-run": "~1.6.0",
-    "gulp-showhelp": "~1.0.0",
-    "gulp-uglify": "~1.2.0",
-    "gulp-watch": "~4.2.0",
-    "html-minifier": "0.7.2",
-    "istanbul": "~0.3.20",
-    "jquery": "2.2.0",
-    "jquery-ajax-transport-xdomainrequest": "1.0.4",
-    "karma": "^0.13.19",
+    "phantomjs-prebuilt": "2.1.3",
+    "karma": "~0.13.19",
     "karma-babel-preprocessor": "^5.2.2",
     "karma-chrome-launcher": "^0.2.2",
     "karma-coverage": "~0.5.2",
     "karma-firefox-launcher": "^0.1.7",
     "karma-mocha": "^0.2.1",
     "karma-phantomjs-launcher": "1.0.0",
-    "less": "~2.5.3",
-    "less-plugin-clean-css": "~1.5.1",
-    "localforage": "1.2.3",
-    "minimist": "~1.1.1",
-    "mktemp": "~0.4.0",
     "mocha": "^2.3.4",
-    "ng-annotate": "1.2.1",
-    "phantomjs-prebuilt": "2.1.3",
-    "q": "~1.4.1",
-    "run-sequence": "~1.1.0",
     "sinon": "1.17.2",
-    "slipjs": "pornel/slip#0626afc",
-    "toml": "~2.2.3"
-  },
-  "dependencies": {
-    "bootstrap": "3.3.6"
+    "expect.js": "0.3.1",
+    "commander": "2.9.0",
+    "browserstack-webdriver": "2.41.1",
+    "angular-mocks": "1.4.8",
+    "angular": "1.4.8",
+    "angular-translate": "2.8.1",
+    "localforage": "1.2.3",
+    "jquery": "2.2.0",
+    "jquery-ajax-transport-xdomainrequest": "1.0.4",
+    "d3": "3.5.12",
+    "fastclick": "1.0.6",
+    "bootstrap": "3.3.6",
+    "slipjs": "pornel/slip#0626afc"
   }
 }
