Rename SigeomPlugins in Gf3Plugins

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 /node_modules
 /coverage
 /src/deps.js
-/src/js/SigeomPlugins.js
+/src/js/Gf3Plugins.js
 /src/style/app.css
 /src/index.html
 /src/mobile.html
