--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "angular-mocks": "1.6.4",
     "babel-cli": "^6.24.1",
     "babel-preset-env": "^1.4.0",
+    "babel-preset-es2015": "^6.24.1",
     "bootstrap": "3.3.7",
     "browserstack-webdriver": "2.41.1",
     "commander": "2.9.0",
@@ -31,12 +32,12 @@
     "google-closure-library": "20170409.0.0",
     "istanbul": "~0.4.5",
     "karma": "1.6.0",
-    "karma-coverage": "~v1.1.1",
-    "karma-mocha": "1.3.0",
-    "karma-phantomjs-launcher": "1.0.4",
     "karma-babel-preprocessor": "^6.0.1",
     "karma-chrome-launcher": "^2.1.0",
+    "karma-coverage": "~v1.1.1",
     "karma-firefox-launcher": "^1.0.1",
+    "karma-mocha": "1.3.0",
+    "karma-phantomjs-launcher": "1.0.4",
     "less": "~2.7.2",
     "less-plugin-clean-css": "~1.5.1",
     "mocha": "3.3.0",
